fix(portal): 해제본 파서를 개발망 실물 구조에 맞춘다
배포 압축본은 영상 폴더도 버전 폴더도 비식별 폴더도 없이 이미지와 문서가 짝으로 평평하게 놓인다
(개발망 실물 확인 2026-09-16 — 구 가정대로는 영상을 하나도 못 찾아 등록이 실패했다).

- 해제본을 재귀로 훑어 같은 이름의 이미지·문서 짝을 모으고, 문서가 싣는 영상 파일명으로 묶는다.
- 원본으로 보이는 폴더는 짝이 온전해도 읽지 않는다 — 재귀로 넓히며 처음 만난 결합이라 명시했다.
- 분류가 이름 문자열로만 와 라벨 마스터에 잇지 않는다. 좌표 형식이 우리가 아는 것이 아니면 멈춘다.
- 영상 길이·검증 이벤트 유형을 등록 메타로 남긴다.

@design ADR-068 · AC-1118

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01FCy6K4uptiDbx5stk7DV2W